task_validator: make gpumode validation deterministic and reliable. Sync functional model weights from module model in correctness_check.py and cal_kernel_perf.py, seed RNG, deepcopy inputs, and return non-zero exit codes on failure across all gpumode tasks. Fix 1001_NormalAttention_dot conv2d IntArrayRef compile ambiguity, rename 12501 functional class to CrossEntropyLossLabelSmoothing, and align 14044 dropout behavior for eval-time correctness comparison.

--- a/config.yaml
+++ b/config.yaml
@@ -25,7 +25,18 @@ agent:
 #   - all                               # Run ALL available tasks
 
 tasks:
-  - torch2hip
+  - torch2hip/gpumode/1001_NormalAttention_dot
+  - torch2hip/gpumode/10024_Feedforward
+  - torch2hip/gpumode/1003_NormalAttention_embedded_gaussian
+  - torch2hip/gpumode/102_ItemQueryAttention
+  - torch2hip/gpumode/10456_MultiHeadAttention
+  - torch2hip/gpumode/11122_PositionEmbedder
+  - torch2hip/gpumode/1178_MLP_model
+  - torch2hip/gpumode/12501_CrossEntropyLossLabelSmoothing
+  - torch2hip/gpumode/14044_PositionWiseFeedForward
+  - torch2hip/gpumode/14069_TransformerFFNLayer
+  - torch2hip/gpumode/5334_GateGRUSelectionLayer
+  - torch2hip/gpumode/8325_MaskedLanguageModel
 
 target_gpu_model: MI300
 log_directory: logs
