--- a/config.yaml
+++ b/config.yaml
@@ -21,22 +21,14 @@ agent:
 # Specify task names to execute (use full path from tasks/ directory)
 # Examples:
 #   - hip2hip                           # All tasks under hip2hip
+#   - triton2triton                     # All tasks under triton2triton
+#   - torch2hip                         # All tasks under torch2hip
 #   - hip2hip/silu                      # single task under hip2hip
 #   - all                               # Run ALL available tasks
 
 tasks:
-  - torch2hip/gpumode/1001_NormalAttention_dot
-  - torch2hip/gpumode/10024_Feedforward
-  - torch2hip/gpumode/1003_NormalAttention_embedded_gaussian
-  - torch2hip/gpumode/102_ItemQueryAttention
-  - torch2hip/gpumode/10456_MultiHeadAttention
-  - torch2hip/gpumode/11122_PositionEmbedder
-  - torch2hip/gpumode/1178_MLP_model
-  - torch2hip/gpumode/12501_CrossEntropyLossLabelSmoothing
-  - torch2hip/gpumode/14044_PositionWiseFeedForward
-  - torch2hip/gpumode/14069_TransformerFFNLayer
-  - torch2hip/gpumode/5334_GateGRUSelectionLayer
-  - torch2hip/gpumode/8325_MaskedLanguageModel
+  - torch2hip/gpumode/12478_SoftNLL
+  - torch2hip/gpumode/14007_KDLoss
 
 target_gpu_model: MI300
 log_directory: logs
