feat: add Codex CLI agent integration and improve agent preflight logging
- Add agents/codex/ with launch_agent.py and agent_config.yaml for Codex CLI support
  (streaming JSON output, timeout handling, optional model override)
- Add _get_cli_version() and preflight logging (binary, version, workspace, model)
  to Claude Code and Cursor agents
- Support optional model/effort overrides via agent_config.yaml for Claude/Cursor

--- a/agents/cursor/agent_config.yaml
+++ b/agents/cursor/agent_config.yaml
@@ -1,3 +1,6 @@
 max_iterations: 3
 timeout_seconds: 600
 python_path: /root/AgentKernelArena/.venv/bin/python3
+# Optional: set explicit Cursor model so logs record exact runtime settings.
+# model: sonnet-4-thinking
+# Note: Cursor Agent CLI does not expose a separate `effort` flag; "thinking" is typically encoded in the model choice.
