--- a/config.yaml
+++ b/config.yaml
@@ -6,16 +6,17 @@
 # Choose ONE agent template that defines how the LLM interacts with the system
 # Available options:
 # - cursor
+# - codex
 # - geak_optimagentv2
 # - single_llm_call
 # - SWE-agent
 # - claude_code
 # - geak_hip
 # - openevolve
-# - ourllm_kernel2kernel
+# - geak_ourllm_kernel2kernel
 # - task_validator 
 agent:
-  template: claude_code 
+  template: codex 
 
 # Task Selection
 # Specify task names to execute (use full path from tasks/ directory)
@@ -27,31 +28,45 @@ agent:
 #   - all                               # Run ALL available tasks
 
 tasks:
-  - triton2triton/vllm/triton_temperature
-  - triton2triton/vllm/triton_log_softmax
-  - triton2triton/vllm/triton_penalties
-  - triton2triton/vllm/triton_apply_grammar_bitmask
-  - triton2triton/vllm/triton_logit_bias
-  - triton2triton/vllm/triton_topk_log_softmax
-  - triton2triton/vllm/triton_silu_mul_fp8_quant_dg
-  - triton2triton/vllm/triton_compute_slot_mappings
-  - triton2triton/vllm/triton_gather_block_tables
-  - triton2triton/vllm/triton_reshape_and_cache_flash_diffkv
-  - triton2triton/vllm/triton_decode_attn_stage1
-  - triton2triton/vllm/triton_decode_attn_stage2
-  - triton2triton/vllm/triton_flash_prefill_attention
-  - triton2triton/vllm/triton_unified_attention_3d
-  - triton2triton/vllm/triton_prepare_eagle_inputs
-  - triton2triton/vllm/triton_prepare_eagle_docode
-  - triton2triton/vllm/triton_eagle_prepare_inputs_padded
-  - triton2triton/vllm/triton_update_eagle_inputs
-  - triton2triton/vllm/triton_copy_and_expand_eagle_inputs
-  - triton2triton/vllm/triton_rejection_sample
-  - triton2triton/vllm/triton_count_expert_tokens
-  - triton2triton/vllm/triton_ep_scatter_1
-  - triton2triton/vllm/triton_ep_scatter_2
-  - triton2triton/vllm/triton_ep_gather
-  - triton2triton/vllm/triton_fused_moe
+  - triton2triton/vllm/triton_pack_bitmatrix
+  - triton2triton/vllm/triton_pack_seq
+  - triton2triton/vllm/triton_paged_prefix_prefill
+  - triton2triton/vllm/triton_paged_prefix_prefill_alibi
+  - triton2triton/vllm/triton_per_token_group_quant_fp8
+  - triton2triton/vllm/triton_per_token_group_quant_fp8_colmajor
+  - triton2triton/vllm/triton_per_token_group_quant_int8
+  - triton2triton/vllm/triton_per_token_quant_int8
+  - triton2triton/vllm/triton_post_update
+  - triton2triton/vllm/triton_prepare_mrope_positions
+  - triton2triton/vllm/triton_prepare_pos_seq_lens
+  - triton2triton/vllm/triton_prepare_prefill_inputs
+  - triton2triton/vllm/triton_prompt_logprobs_token_ids
+  - triton2triton/vllm/triton_ranks
+  - triton2triton/vllm/triton_reduce_segments
+  - triton2triton/vllm/triton_rejection_greedy_sample
+  - triton2triton/vllm/triton_rejection_random_sample
+  - triton2triton/vllm/triton_reshape_and_cache_flash
+  - triton2triton/vllm/triton_rms_norm
+  - triton2triton/vllm/triton_sample_recovered_tokens
+  - triton2triton/vllm/triton_scale_swizzle
+  - triton2triton/vllm/triton_scaled_mm
+  - triton2triton/vllm/triton_selective_scan_update
+  - triton2triton/vllm/triton_silu_mul_quant_fp8
+  - triton2triton/vllm/triton_solve_tril_16x16
+  - triton2triton/vllm/triton_ssd_bmm
+  - triton2triton/vllm/triton_ssd_chunk_cumsum
+  - triton2triton/vllm/triton_ssd_chunk_scan
+  - triton2triton/vllm/triton_ssd_chunk_state
+  - triton2triton/vllm/triton_ssd_chunk_state_varlen
+  - triton2triton/vllm/triton_ssd_state_passing
+  - triton2triton/vllm/triton_swiglustep_and_mul
+  - triton2triton/vllm/triton_topk_topp
+  - triton2triton/vllm/triton_unified_attention_2d
+  - triton2triton/vllm/triton_unpack_seq
+  - triton2triton/vllm/triton_w8a8_block_int8_matmul
+  - triton2triton/vllm/triton_w8a8_block_scaled_mm
+  - triton2triton/vllm/triton_write_zeros_to_output
+  - triton2triton/vllm/triton_wy_fast_recompute_wu
 
 
 target_gpu_model: MI300
