Decouple GPU architecture from hardcoded values across the framework
Restructure cheatsheet system to separate GPU architecture specs from language
knowledge, add runtime PYTORCH_ROCM_ARCH setup driven by config.yaml, and
inject a pre-task GPU arch consistency check into agent prompts.

Remaining geak agent coupling points (hardcoded MI250 prompt, MI300X golden
metrics path) are marked with TODOs for follow-up.

--- a/agents/geak_optimagentv2/agent_config.yaml
+++ b/agents/geak_optimagentv2/agent_config.yaml
@@ -50,6 +50,9 @@ descendant_debug: 0
 
 # Target GPU architecture (e.g., "MI325X", "MI250", "MI200")
 target_gpu: "MI325X"
+# TODO: launch_agent.py:1043 hardcodes the golden_metrics directory name as
+#   "AMD_Instinct_MI300X_VF_golden_metrics". This path should be parameterized
+#   by target_gpu so it resolves correctly on different GPU models (e.g. MI355X).
 
 # Enable kernel profiling with rocprof-compute
 profiling: true
